# evm-test-suite

./: .gitignore  Cargo.toml
src/: arithmetic.rs  bitwise_logic_operation.rs  io_and_flow_operations.rs  lib.rs  log.rs  performance.rs  vm.rs
