[package]
name = "evm-test-suite"
version = "0.1.0"
edition = "2021"
include = [ "/evm-tests" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.74" }
ethereum-types = { version = "0.13.1" }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
